[project]
name = "comfyui-videohelpersuite"
description = "Nodes related to video workflows"
version = "1.4.0"
license = { file = "LICENSE" }
dependencies = [
    "comfyui",
    "opencv-python-headless",
    "imageio-ffmpeg",
]

[project.urls]
Repository = "https://github.com/Kosinkadink/ComfyUI-VideoHelperSuite"

#  Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "kosinkadink"
DisplayName = "ComfyUI-VideoHelperSuite"
Icon = ""

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "comfyui_video_helper_suite",
    "comfyui_video_helper_suite.videohelpersuite",
    "comfyui_video_helper_suite.videohelpersuite.video_formats"
]

[tool.setuptools.package-dir]
"comfyui_video_helper_suite" = "."
"comfyui_video_helper_suite.videohelpersuite" = "videohelpersuite"
"comfyui_video_helper_suite.videohelpersuite.video_formats" = "videohelpersuite/video_formats"

[tool.setuptools.package-data]
"*" = ["**/*.js", "**/*.json"]

[project.entry-points."comfyui.custom_nodes"]
comfyui_video_helper_suite = "comfyui_video_helper_suite.videohelpersuite.nodes"
comfyui_video_helper_suite_web_directory = "comfyui_video_helper_suite"